--- a/abstract.tex
+++ b/abstract.tex
@@ -1,11 +1,11 @@
 \begin{abstract}
 
-  Due to the growing concern for huge energy consumption, Internet service providers tend
-  to build data centers with renewable energy support to reduce cost and the carbon footprint.
-  Prior work about ``green'' data center placement issues didn't consider the potential impact
-  on the electric grid by penetrating large loads and intermittent power generations from renewable
-  resources. In this paper, we propose a holistic framework which incorporates together the cost of data centers,
-  renewable energy power plants and the utility grid. By considering various factors such as land, building, hardware
-  costs as well as the losses on the grid network, we try to solve an optimization problem to minimize the overall cost for both service providers and utility grid operators. \xynote{As discussed, we are assuming that the IT service provider want to build data centers and also renewable power plants to support these datacenters.} Our results show that losses of the regional grid would have remarkable effect on the decision of selecting locations for data centers and renewable energy power plants. Furthermore, co-location choices for distribution load generation sources and loads as datacenters are not always better, even comparing only the losses on the grid, which is quite not intuitive. Our work gives a way to seek for optimal locations in the capacity planning stage and also shows the importance for cloud service companies and grid operators to collaborate for reduction of overall cost.
+  Datacenters consume a massive amount of energy, and this consumption is increasing rapidly.  As new datacenters are built, environmentally conscious operators are seeking to mitigate their environmental impact by building offsetting renewable power plants.  These renewable power plants may or may not be co-located with datacenters.  While a number of research efforts have looked at the optimal placement of new datacenters and renewable power plants, they have mostly neglect the impact on the electricity transmission grid.  With rapidly increasing penetration of such ``renewable powered datacenters,'' it is becoming imperative to study their impact on the tranmission grid.  In this paper, we show that considerations of the impact on the transmission grid when placing new datacenters and renewable power plants can be mutually beneficial to both grid operators and datacenter owners.  Specifically, locating datacenters and renewable power plants at strategic places in the grid could help to minimize (i) overloading of transmission lines, (ii) grid voltage variations outside the acceptable range, and (iii) system losses.  We develop an optimization framework for placing a new datacenter and wind farm, and use it in a case study to show that considering transmission losses can lead to different placement and lower overall cost.  Interestingly, co-locating the datacenter and wind farm does not always lead to lowest impact on the transmission grid and lowest overall cost.  Thus, we conclude that optimal placement of new datacenters and renewable power plant can only be achieved by jointly considering the impact of location on the costs for the datacenter owners as well as for the grid operators.
 
-\end{abstract} 
+\end{abstract}
+
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "paper"
+%%% End:
