add two parameter tables

--- a/framework.tex
+++ b/framework.tex
@@ -85,7 +85,7 @@ The datacenter and wind farm can each be placed at any location within a set of 
 
 \subsubsection{Datacenter} The cost of the datacenter can be broken down into capital ($dcCAPEX$) and operational ($dcOPEX$) components.  The capital costs are those investments made upfront and depreciated over the lifetime of the datacenter.  These costs include the cost for buying land ($dcLandCost$), building the datacenter ($dcBuildCost$), and buying IT equipment ($dcITCost$).  The cost of building the datacenter include datacenter construction cost as well as the costs of laying power and network lines to the datacenter.  IT equipment includes servers and switches.  Land price varies according to location ($pLand(d)$ for location $d$), whereas the other prices do not to a first approximation.  Of course, the total cost of laying the power ($cLinePow(d)$) and network ($cLineNet(d)$) lines depends on location, as the distances to the closest power plant and network backbone are location-dependent.  The datacenter construction cost is typically estimated as a function of the maximum power to be consumed by the datacenter.  This maximum power is that required by the maximum number of servers and network switches when running at 100\% utilization times the maximum expected PUE of the datacenter.  The PUE is computed by dividing the overall power consumption by the power consumption of the computational equipment.  The PUE is higher when temperature and/or humidity are high, since cooling consumes more energy under those conditions.
 
-The operational costs are those incurred during the operation of the datacenter, and include costs for external network bandwidth use ($dcNetCost$) and the grid electricity ($dcEnergyCost$) required to run the datacenter.  (There is also a cost for water, which is currently not considered by can be easily added.)  The electricity cost is computed based on the IT equipment's power demand over time ($powerNeed(t)$), the PUE, and the electricity price.  Both the electricity price and the PUE vary with location.
+The operational costs are those incurred during the operation of the datacenter, and include costs for external network bandwidth use ($dcNetCost$) and the grid electricity ($dcEnergyCost$) required to run the datacenter.  (There is also a cost for water, which is currently not considered by can be easily added.)  The electricity cost is computed based on the IT equipment's power demand over time ($powNeed(t)$), the PUE, and the electricity price.  Both the electricity price and the PUE vary with location.
 
 Finally, lower taxes and one-time incentives are another important component of the cost of a datacenter.  For example, some states in the US lower taxes on datacenters, as they generate employment and wealth around them.  This component depends on the nature of the savings and applies to each cost in a different way.  Although we do not consider this component further, it is easy to add it to our framework.
 
@@ -104,7 +104,7 @@ The major constraints that must be observed for the above optimization is that t
 
 \subsection{Solving the Optimization Problem}
 
-Currently, we perform a complete search over all possible placement of the datacenter and wind farm to find the best solution to the optimization problem.  This approach works well for the scale that we are studying (e.g., the New England system).  However, as the system scale to much larger sizes, a more scalable approach would eventually be needed.  We leave this for future work.  (Note that the New England system that we study already covers a large area -- most of the North Eastern region of the U.S. and some parts of Canada -- so that it may not be necessary to study much larger systems.) 
+Currently, we perform a complete search over all possible placement of the datacenter and wind farm to find the best solution to the optimization problem.  This approach works well for the scale that we are studying (e.g., the New England system).  However, as the system scale to much larger sizes, a more scalable approach would eventually be needed.  We leave this for future work.  (Note that the New England system that we study already covers a large area -- most of the North Eastern region of the U.S. and some parts of Canada -- so that it may not be necessary to study much larger systems.)
 
 % datacenters and renewable power plant, as well as the capacity provisioned at each location for datacenters or green power plants (if any).
 
