--- a/paper.tex
+++ b/paper.tex
@@ -19,6 +19,7 @@
 \usepackage{rotating}
 \usepackage{algpseudocode}
 \usepackage{amssymb}
+\usepackage{slashbox}
 \usepackage[colorlinks=true,citecolor=blue,pagebackref=true]{hyperref}
 
 
