--- a/intro.tex
+++ b/intro.tex
@@ -1,20 +1,52 @@
 \section{Introduction}
 \label{sec:intro}
 
-As reported recently, the energy consumption of datacenters keeps growing while more and more enterprises and organizations are building their own datacenters\cite{urgaonkar2011optimal,Koomey2011}. The increasing speed of the datacenter energy consumption is approximately 10-12\% per year recently \cite{ghatikar2014demand}. The carbon emission and environment pollution issues attract insights of seeking for clean energy resources. Many IT companies such as Google\cite{GoogleGreen}, Apple\cite{Apple13}, and McGrawHill\cite{McGrawHill11} are trying to build their datacenters together with renewable energy power plants.
+Datacenters are being constructed at a rapid pace as computing is increasingly moving to the cloud (e.g., \cite{}).  As new datacenters are built, some environmentally conscious operators are seeking to mitigate the environmental impact of their massive energy consumption by also building offsetting renewable power plants (e.g.,~\cite{GoogleGreen,Apple13,McGrawHill11}).  Both the new datacenters and the accompanying renewable power plants can pose challenges to the electricity grid.  Specifically, a large datacenter can require upward of 100MW of power, presenting a significant load to the grid.  Since adding transmission capacity to the grid takes a long time (typically 7 to 10 years) and is extremely expensive \thunote{citation?}, attaching new large datacenters and renewable power plants to the grid can lead to increased overloading of transmission lines, grid voltage variations outside the acceptable range, and transmission system losses.  Thus, the increasing penetration of such {\em renewable powered datacenters}\footnote{Note that we are calling a datacenter together with an offsetting renewable power plant a ``renewable powered datacenter'' for brevity, even though the two may {\em not} be physically co-located.} makes it imperative to study their impact on the transmission grid.
 
-Usually, generation of sustainable energy like solar and wind will be closely related to the weather condition at certain locations. As far as we know, there might be different choices for building the datacenter and the power plants. Both on-site and off-site generation are possible approaches \cite {Goiri13}. By grid-centric approaches, the renewable energy will be generated at locations with sufficient renewable sources and pumped into the grid. On the other hand, co-location and self-generation approaches sit the datacenter and the power plant at the same location to facilitate management and avoid long-distance losses. Since it seems no approach is perfect, we argue that companies essentially expect benefits from the investments by building up datacenters and green power plants. However, since the renewable energy generation is mostly intermittent and sometimes might bring great penetration current into the electric grid, the capacity should be carefully planned and will be limited from the perspective of grid operators. For example, some tiny failures may make an area of grid system completely out of power \cite{nytimes2014}.
+Researchers have studied the placement of new datacenters since they are expensive to build and operate, and parts of the construction and operation costs are location-dependent~\cite{Goiri11place,Dalger05,Boley09,larumbe2012optimal,berral2014building}.  However, these studies have not considered the impact of new datacenters on the grid.  Others have studied whether the renewable power plants should be co-located with the datacenters\cite{}, and have considered transmission loss when the datacenter and the renewable power plant were physically distributed.  However, only a fixed loss percentage was assumed.
 
-Since datacenters are becoming quite large loads for the electric grid, they are supposed to have a significant impact on the operation of power grid \cite{haowang2014grid}. Large datacenter loads might increase the grid load and also lead to significant load variability of the electricity system. Especially, the emergence of the renewable energy sources with intermittent nature brings fluctuations onto the electricity networks. Furthermore, grid losses are on of the largest expenses for the power system operators \cite{de2014investigation}. EIA (U.S. Energy Information Administration) \cite{EIA} has estimated that the electricity transmission and distribution losses all over the U.S. is about 6\% of the electricity that is transmitted and distributed each year (averaged from 1990 to 2012). Thus, reduction of these losses for the grid can greatly affect the total operational costs.
+In this paper, we first show that the placement of a large renewable powered datacenter can significantly impact the transmission grid, and that careful placement can be beneficial to both the grid operators and datacenter owners.  Specifically, we study the impact of placing a datacenter within a real world transmission system of the New England Independent System Operator (ISO) spanning most of North Eastern region of United States and some parts of Canada.  We use simulation to show that datacenters/renewable power plants located at strategic places in the grid could help minimize i) overloading of transmission lines; ii) grid voltage variations outside the acceptable range iii) system losses.
 
-In this case, companies who want to build datacenters with either on-site or off-site renewable energy plants have to get the permission from the grid operators first in order to reduce the unexpected influence to the grid operation. Since the grid losses will also finally turn into expenses for end-users, service providers may want to collaborate with grid operators to minimize the overall cost when planning locations and capacity for the datacenters. In the current literature, datacenter placement issues have been mentioned in some prior work\cite{Goiri11place,Dalger05,Boley09,larumbe2012optimal}, and there are also some research focused on the capacity planning of green datacenters \cite{Le10,berral2014building}. Nevertheless, these work hasn't considered the impact of datacenter placement on the grid itself, which might also lead to comparable costs as other costs for datacenters.
+\subsubsection{Overloading of transmission lines}
+The transmission lines (referred as branch hereafter in the paper) are used to transport power from the large generators to the load. The power carrying capacity is limited to protect the line from over heating, mainly due to the line resistive losses i.e., $I^{2}R$, where $I$ is the current flowing through the branch and $R$ is the resistance of the branch.
 
-In this paper, we attempt to set up a different point of view, by combining the consideration for cloud service providers and energy companies together and aiming at the minimization of the overall cost for both. First, we investigate the impact of datacenter placement and its importance to the grid by studying a region of grid network. We pay special attention to the datacenter size, datacenter locations and the variation of renewable power generations. Second, we formulate the optimization framework, which incorporates the costs of datacenters, renewable power plants and power grid into one objective. We also try to solve it under necessary constraints by using several different approaches. Then we conduct a case study in the New England area of the United States, by sitting and provisioning datacenters and power plants at different locations, with the purpose of minimizing the overall cost. Results show that grid losses can have remarkable impact on the decision of selecting best locations for green datacenters. Furthermore, the co-location choices by sitting the datacenter and green plants together don't show advantages despite of the reduced line cost and distribution cost, which is not that intuitive as prior work thought.
+A transmission line has typically two ratings: short term and long term capacity rating. During certain wind and system load (including datacenter load) conditions, some of the transmission lines could get overloaded. If this happens during the normal operation of the electric grid then one of the following will be done: i) if an electronic power flow controller is available then it is used to control the power flow through the overloaded line; or ii) in extreme situations, the overloaded line is disconnected which may result in power supply interruption to the loads.
 
-\myparagraph{Contributions of this paper.} The main contributions of this paper includes: (i) it quantifies the potential impact of datacenter placement on the bus network of power grid, and (ii) it proposes a framework for smart placement of both datacenters and renewable energy plants in the power grid network. (iii) it formulates an optimization problem and gives a solution approach to find out good choices for sitting and provisioning datacenters when considering grid costs.
+If major transmission lines are getting overloaded quiet often annually then new lines are planned and built.  As already mentioned, this solution is very expensive and takes a long time. The need for such expensive grid retrofits may be minimized by planning the location of new datacenters.
 
-To the extent of our knowledge, there is no previous work considering the jointly placement issues of datacenters and green power plants while caring about the grid operational costs together. The remainder of the paper is organized as follows. Section \ref{sec:quantify} first quantifies the potential of datacenters together with wind farms by placing them into different buses of the grid network system. In Section \ref{sec:framework}, we describe the optimization framework in detail, showing the integration of various parameters of the entire problem. Section \ref{sec:eval} evaluates the costs and illustrates breakdown of the total cost by different kinds of strategies. In Section \ref{sec:related}, we present some prior work related to this paper. Finally, the conclusion is given in Section \ref{sec:conclusion}.
+\subsubsection{Voltage variation in electric grid}
+The voltage magnitude varies in the electric grid and needs to be maintained within a narrow range (for example +/- 5\% of nominal) so that there is no damaged caused to the sensitive electronic loads. However, sometimes/days the change in renewable power output could cause the voltage to vary beyond the acceptable limits. Such over/under voltage problems can be mitigated by appropriately locating the datacenter.
+
+\subsubsection{System losses}
+Historically, the electric grid was designed to have large central generating stations that are located far away from the load centers. The power from these central sources would be transmitted to the datacenter over transmission lines. While designing such a grid, the generator location and the transmission line voltage level as well as the path would be optimized to minimize the line losses.  However, today with renewable power being distributed the scenario has changed, the generation sources are distributed and they may be located near the load centers. In order to transfer power from these renewable source we still use the existing transmission lines that were planned and built about 50 years ago or earlier. This may result in higher line losses and sub-optimal power transmission between generation sources and loads. Since we cannot re-design the entire electric grid to minimize line losses, we need to leverage the flexibility we have in locating new loads i.e., renewable powered datacenters in our specific case.
+
+% Furthermore, grid losses are on of the largest expenses for the power system operators \cite{de2014investigation}. EIA (U.S. Energy Information Administration) \cite{EIA} has estimated that the electricity transmission and distribution losses all over the U.S. is about 6\% of the electricity that is transmitted and distributed each year (averaged from 1990 to 2012). Thus, reduction of these losses for the grid can greatly affect the total operational costs.
+
+% As reported recently, the energy consumption of datacenters keeps growing while more and more enterprises and organizations are building their own datacenters\cite{urgaonkar2011optimal,Koomey2011}. The increasing speed of the datacenter energy consumption is approximately 10-12\% per year recently \cite{ghatikar2014demand}. The carbon emission and environment pollution issues attract insights of seeking for clean energy resources. Many IT companies such as Google\cite{GoogleGreen}, Apple\cite{Apple13}, and McGrawHill\cite{McGrawHill11} are trying to build their datacenters together with renewable energy power plants.
+
+
+% Usually, generation of sustainable energy like solar and wind will be closely related to the weather condition at certain locations. As far as we know, there might be different choices for building the datacenter and the power plants. Both on-site and off-site generation are possible approaches \cite {Goiri13}. By grid-centric approaches, the renewable energy will be generated at locations with sufficient renewable sources and pumped into the grid. On the other hand, co-location and self-generation approaches sit the datacenter and the power plant at the same location to facilitate management and avoid long-distance losses. Since it seems no approach is perfect, we argue that companies essentially expect benefits from the investments by building up datacenters and green power plants. However, since the renewable energy generation is mostly intermittent and sometimes might bring great penetration current into the electric grid, the capacity should be carefully planned and will be limited from the perspective of grid operators. For example, some tiny failures may make an area of grid system completely out of power \cite{nytimes2014}.
+
+% Since datacenters are becoming quite large loads for the electric grid, they are supposed to have a significant impact on the operation of power grid \cite{haowang2014grid}. Large datacenter loads might increase the grid load and also lead to significant load variability of the electricity system. Especially, the emergence of the renewable energy sources with intermittent nature brings fluctuations onto the electricity networks. Furthermore, grid losses are on of the largest expenses for the power system operators \cite{de2014investigation}. EIA (U.S. Energy Information Administration) \cite{EIA} has estimated that the electricity transmission and distribution losses all over the U.S. is about 6\% of the electricity that is transmitted and distributed each year (averaged from 1990 to 2012). Thus, reduction of these losses for the grid can greatly affect the total operational costs.
+
+% In this case, companies who want to build datacenters with either on-site or off-site renewable energy plants have to get the permission from the grid operators first in order to reduce the unexpected influence to the grid operation. Since the grid losses will also finally turn into expenses for end-users, service providers may want to collaborate with grid operators to minimize the overall cost when planning locations and capacity for the datacenters. In the current literature, datacenter placement issues have been mentioned in some prior work\cite{Goiri11place,Dalger05,Boley09,larumbe2012optimal}, and there are also some research focused on the capacity planning of green datacenters \cite{Le10,berral2014building}. Nevertheless, these work hasn't considered the impact of datacenter placement on the grid itself, which might also lead to comparable costs as other costs for datacenters.
+
+Next, having shown that the placement of new renewable powered datacenters can significantly impact the transmission system, we proceed to develop an optimization framework for minimizing the total cost of building and operating new datacenters.  Similar to previous works in this area, our framework considers the various capital costs (e.g., land and construction costs) and operational costs of building and operating a new renewable powered datacenter.\footnote{Note that we are not proposing a new method for the placement of renewable power plants (specifically wind farms in our study).  Our cost models are likely simplistic compared to existing techniques for finding good locations for new wind farms.  Rather, the point of our work is that costs for the placement of a new datacenter, renewable power plant, {\em and} their impact on the transmission grid should be studied together.}
+  Unique to this work, however, is the added consideration of the cost of system loss in the transmission grid.
+
+Finally, we use our optimization framework in a case study to demonstrate the potential benefits of our placement approach.  Specifically, we again study the placement of a new datacenter and an offsetting wind farm in the New England ISO system.  \thunote{Need to give a couple of sentences here to summarize our results.}
+
+% In this paper, we attempt to set up a different point of view, by combining the consideration for cloud service providers and energy companies together and aiming at the minimization of the overall cost for both. First, we investigate the impact of datacenter placement and its importance to the grid by studying a region of grid network. We pay special attention to the datacenter size, datacenter locations and the variation of renewable power generations. Second, we formulate the optimization framework, which incorporates the costs of datacenters, renewable power plants and power grid into one objective. We also try to solve it under necessary constraints by using several different approaches. Then we conduct a case study in the New England area of the United States, by sitting and provisioning datacenters and power plants at different locations, with the purpose of minimizing the overall cost. Results show that grid losses can have remarkable impact on the decision of selecting best locations for green datacenters. Furthermore, the co-location choices by sitting the datacenter and green plants together don't show advantages despite of the reduced line cost and distribution cost, which is not that intuitive as prior work thought.
+
+\myparagraph{Contributions.} Our main contributions include: (i) demonstrating the potential impact of renewable powered datacenter placement on a transmission system, (ii) proposing an optimization framework for the smart placement of both datacenters and renewable power plants in the power grid network, and (iii) exploring the potential benefit of the placement framework in a realistic case study.
+
+% To the extent of our knowledge, there is no previous work considering the jointly placement issues of datacenters and green power plants while caring about the grid operational costs together. The remainder of the paper is organized as follows. Section \ref{sec:quantify} first quantifies the potential of datacenters together with wind farms by placing them into different buses of the grid network system. In Section \ref{sec:framework}, we describe the optimization framework in detail, showing the integration of various parameters of the entire problem. Section \ref{sec:eval} evaluates the costs and illustrates breakdown of the total cost by different kinds of strategies. In Section \ref{sec:related}, we present some prior work related to this paper. Finally, the conclusion is given in Section \ref{sec:conclusion}.
 
 
 %We discuss each of these in detail as following:(1) \textbf{The potential of datacenter placement on grid.} (2) \textbf{Jointly placement of datacenters and renewable energy power plants.}
 
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "paper"
+%%% End:
