--- a/paper.tex
+++ b/paper.tex
@@ -19,7 +19,7 @@
 \usepackage{rotating}
 \usepackage{algpseudocode}
 \usepackage{amssymb}
-\usepackage{slashbox}
+%\usepackage{slashbox}
 \usepackage[colorlinks=true,citecolor=blue,pagebackref=true]{hyperref}
 
 
