--- a/related.tex
+++ b/related.tex
@@ -3,7 +3,7 @@
 
 This section reviews relevant work to this paper in the recent literature, which are classified into two categories.
 
-\subsection{Effect of datacenters to the grid}
+\subsection{Datacenters participation in grid programs}
 
 In the smart grid era, datacenters began to show the advantages for demand response and facilitate ancillary services due to its great and controllable flexibility. Researchers studied the effect of datacenter demand response on power consumption reduction \cite{lbnl12shortstudy, lbnl12report}. They found that 25\% of the demand savings can be done with minimal or no impact on datacenter performance. Also, 10\% of the load can be shed with short response time with no operational impact. They did not consider dynamic load migration of the workload which can result in further reduction in power demand. 	
 
@@ -21,6 +21,7 @@ Goiri $\textit{et al.}$ \cite{Goiri11place} focused on intelligently finding the
 
 Larumbe $\textit{et al.}$ \cite{larumbe2012optimal} presented a mathematical problem aiming at solving the location and routing of cloud service components. Gao $\textit{et al.}$ \cite{gao2013answer} studied how to sit datacenters near existing wind farms, and distributing load using a greedy online algorithm.
 Berral $\textit{et al.}$ \cite{berral2014building} considered to select sites for datacenters and on-site power plants aiming at follow-the renewable cloud services. Unlike our work, they didn't put insights the possible impact of datacenters and distributed energy generations on the utility grid system.
+A very close paper to our work is \cite{liu2014pricing} which considered a realistic distribution system and discussed how it impacts the voltage in the distribution system, while we are focusing on the transmission system of the grid.
 
 Different from these work, we quantify and incorporate the impact of the site selection on the grid operation, and regard the summarized cost as the objective, which shows the importance of collaborating service providers and grid operators together to do the site and capacity planning.
 
