--- a/intro.tex
+++ b/intro.tex
@@ -1,11 +1,12 @@
 \section{Introduction}
 \label{sec:intro}
 
-Datacenters are being constructed at a rapid pace as computing is increasingly moving to the cloud (e.g., \cite{}).  As new datacenters are built, some environmentally conscious operators are seeking to mitigate the environmental impact of their massive energy consumption by also building offsetting renewable power plants (e.g.,~\cite{GoogleGreen,Apple13,McGrawHill11}).  Both the new datacenters and the accompanying renewable power plants can pose challenges to the electricity grid.  Specifically, a large datacenter can require upward of 100MW of power, presenting a significant load to the grid.  Since adding transmission capacity to the grid takes a long time (typically 7 to 10 years) and is extremely expensive \thunote{citation?}, attaching new large datacenters and renewable power plants to the grid can lead to increased overloading of transmission lines, grid voltage variations outside the acceptable range, and transmission system losses.  Thus, the increasing penetration of such {\em renewable powered datacenters}\footnote{Note that we are calling a datacenter together with an offsetting renewable power plant a ``renewable powered datacenter'' for brevity, even though the two may {\em not} be physically co-located.} makes it imperative to study their impact on the transmission grid.
+Datacenters are being constructed at a rapid pace as computing is increasingly moving to the cloud (e.g., \cite{which one?}).  As new datacenters are built, some environmentally conscious operators are seeking to mitigate the environmental impact of their massive energy consumption by also building offsetting renewable power plants (e.g.,~\cite{GoogleGreen,Apple13,McGrawHill11}).  Both the new datacenters and the accompanying renewable power plants can pose challenges to the electricity grid.  Specifically, a large datacenter can require upward of 100MW of power, presenting a significant load to the grid.  Since adding transmission capacity to the grid takes a long time (typically 7 to 10 years) and is extremely expensive \cite{interconnection2010survey}%\thunote{citation?}
+, attaching new large datacenters and renewable power plants to the grid can lead to increased overloading of transmission lines, grid voltage variations outside the acceptable range, and transmission system losses.  Thus, the increasing penetration of such {\em renewable powered datacenters}\footnote{Note that we are calling a datacenter together with an offsetting renewable power plant a ``renewable powered datacenter'' for brevity, even though the two may {\em not} be physically co-located.} makes it imperative to study their impact on the transmission grid.
 
-Researchers have studied the placement of new datacenters since they are expensive to build and operate, and parts of the construction and operation costs are location-dependent~\cite{Goiri11place,Dalger05,Boley09,larumbe2012optimal,berral2014building}.  However, these studies have not considered the impact of new datacenters on the grid.  Others have studied whether the renewable power plants should be co-located with the datacenters\cite{}, and have considered transmission loss when the datacenter and the renewable power plant were physically distributed.  However, only a fixed loss percentage was assumed.
+Researchers have studied the placement of new datacenters since they are expensive to build and operate, and parts of the construction and operation costs are location-dependent~\cite{Goiri11place,Dalger05,Boley09,larumbe2012optimal,berral2014building}.  However, these studies have not considered the impact of new datacenters on the grid.  Others have studied whether the renewable power plants should be co-located with the datacenters\cite{gao2013answer}, and have considered transmission loss when the datacenter and the renewable power plant were physically distributed.  However, only a fixed loss percentage was assumed.
 
-In this paper, we first show that the placement of a large renewable powered datacenter can significantly impact the transmission grid, and that careful placement can be beneficial to both the grid operators and datacenter owners.  Specifically, we study the impact of placing a datacenter within a real world transmission system of the New England Independent System Operator (ISO) spanning most of North Eastern region of United States and some parts of Canada.  We use simulation to show that datacenters/renewable power plants located at strategic places in the grid could help minimize i) overloading of transmission lines; ii) grid voltage variations outside the acceptable range iii) system losses.
+In this paper, we first show that the placement of a large renewable powered datacenter can significantly impact the transmission grid, and that careful placement can be beneficial to both the grid operators and datacenter owners.  Specifically, we study the impact of placing a datacenter within a real world transmission system of the New England Independent System Operator (ISO) spanning most of North Eastern region of United States and some parts of Canada.  We use simulation to show that datacenters/renewable power plants located at strategic places in the grid could help minimize i) overloading of transmission lines; ii) grid voltage variations outside the acceptable range; iii) system losses.
 
 \subsubsection{Overloading of transmission lines}
 The transmission lines (referred as branch hereafter in the paper) are used to transport power from the large generators to the load. The power carrying capacity is limited to protect the line from over heating, mainly due to the line resistive losses i.e., $I^{2}R$, where $I$ is the current flowing through the branch and $R$ is the resistance of the branch.
@@ -34,7 +35,7 @@ Historically, the electric grid was designed to have large central generating st
 Next, having shown that the placement of new renewable powered datacenters can significantly impact the transmission system, we proceed to develop an optimization framework for minimizing the total cost of building and operating new datacenters.  Similar to previous works in this area, our framework considers the various capital costs (e.g., land and construction costs) and operational costs of building and operating a new renewable powered datacenter.\footnote{Note that we are not proposing a new method for the placement of renewable power plants (specifically wind farms in our study).  Our cost models are likely simplistic compared to existing techniques for finding good locations for new wind farms.  Rather, the point of our work is that costs for the placement of a new datacenter, renewable power plant, {\em and} their impact on the transmission grid should be studied together.}
   Unique to this work, however, is the added consideration of the cost of system loss in the transmission grid.
 
-Finally, we use our optimization framework in a case study to demonstrate the potential benefits of our placement approach.  Specifically, we again study the placement of a new datacenter and an offsetting wind farm in the New England ISO system.  \thunote{Need to give a couple of sentences here to summarize our results.}
+Finally, we use our optimization framework in a case study to demonstrate the potential benefits of our placement approach.  Specifically, we again study the placement of a new datacenter and an offsetting wind farm in the New England ISO system.  \thunote{Need to give a couple of sentences here to summarize our results.} Results of our case studies illustrate that by jointly considering the placement of the datacenter and the wind farm, the total cost will be reduced compared to other strategies, including the cost of system losses in the electric grid.
 
 % In this paper, we attempt to set up a different point of view, by combining the consideration for cloud service providers and energy companies together and aiming at the minimization of the overall cost for both. First, we investigate the impact of datacenter placement and its importance to the grid by studying a region of grid network. We pay special attention to the datacenter size, datacenter locations and the variation of renewable power generations. Second, we formulate the optimization framework, which incorporates the costs of datacenters, renewable power plants and power grid into one objective. We also try to solve it under necessary constraints by using several different approaches. Then we conduct a case study in the New England area of the United States, by sitting and provisioning datacenters and power plants at different locations, with the purpose of minimizing the overall cost. Results show that grid losses can have remarkable impact on the decision of selecting best locations for green datacenters. Furthermore, the co-location choices by sitting the datacenter and green plants together don't show advantages despite of the reduced line cost and distribution cost, which is not that intuitive as prior work thought.
 
